fix(pkg): public

--- a/package.json
+++ b/package.json
@@ -36,6 +36,5 @@
     "Dmitry Unkovsky <diunko@yandex-team.ru> (http://github.com/diunko)"
   ],
   "readmeFilename": "README.md",
-  "license": "MIT",
-  "private": true
+  "license": "MIT"
 }
